# t3d2map

./: .gitignore  CMakeLists.txt  README.md  brush2map.rb  conanfile.txt
.github/workflows/: main.yml
cgal/: conanfile.py
doc/: OFF (file format) - Wikipedia, the free encyclopedia.mhtml
examples/: Entry.t3d  WheelOfTime.t3d  cube-brush.t3d  cube.t3d  intersected_brush.t3d  test.t3d
lib/: mapwriter.rb  t3dreader.rb
old_src/: build_polygon.cpp  common.h  geomview_test.cpp  plane.h  polygon.h  vector.h
src/: CMakeLists.txt  PMPCorefinementVisitor.h  backtrace.hpp  build_polygon.cpp  common.cpp  main.cpp  nef_simple_test.cpp  nef_visualizaion.cpp  plane.cpp  polygon.cpp  polygon.h  polylist.cpp  polylist.h  section.cpp  section.h  vector.h
