file(GLOB UI_FILES     *.ui)
file(GLOB HEADER_FILES *.h)
file(GLOB CPP_FILES    *.cpp)
file(GLOB TS_FILES     *.ts)
file(GLOB QRC_FILES    *.qrc)

set(TRANSLATION_FILES ${TRANSLATION_FILES} ${TS_FILES} PARENT_SCOPE)
set(FILES_TO_TRANSLATE ${FILES_TO_TRANSLATE} ${CPP_FILES} ${UI_FILES} ${HEADER_FILES} PARENT_SCOPE)

QT4_WRAP_UI(GEN_UI_FILES ${UI_FILES})
QT4_WRAP_CPP(GEN_MOC_FILES ${HEADER_FILES})
QT4_ADD_TRANSLATION(GEN_QM_FILES ${TS_FILES})
QT4_ADD_RESOURCES(GEN_RC_FILES ${QRC_FILES})

add_executable(t3d2map ${CPP_FILES} ${GEN_UI_FILES} ${GEN_MOC_FILES} ${GEN_QM_FILES} ${GEN_RC_FILES})
target_link_libraries(t3d2map ${QT_LIBRARIES} ${VTK_LIBRARIES} ${OPENGL_gl_LIBRARY} QVTK)

